   pain text format), including headers, AJAX requests, status codes, and
   timings. When this function is called, the traffic log is cleared, so the
   returned content is only the traffic seen since the last call.

 - Add support for browser session specific options when starting a new 
   session (used to trigger capture of browser network traffic). 

1.2.14 (2008-03-08)
===================

 - Fixing packaging problem
 - Removed warnings when running unit tests

1.2.13 (2008-03-05)
===================

 - Patch for incremental calls to `wait_for_text` (Thank you Rick Lee-Morlang)

 - Regular expression support in `wait_for_text` (Thank you Rick Lee-Morlang)

    click "a_locator", :wait_for => :text, :text => /Some.*ing/

 - Set read and open timeout on HTTP connection to Remote Control
  
1.2.12 (2009-02-28)
===================

 - Packaging generated driver that was left out in 1.2.11 packaging

1.2.11 (2009-02-27)
===================

 - More idiomatic hash-based constructor for the client driver:

    Selenium::Client::Driver.new \
      :host => "localhost",
      :port => 4444,
      :browser => "*firefox",
      :timeout_in_seconds => 10,
      :url => "http://localhost:3000"
    
 - Added jQuery support for wait_for_ajax
 
 - Can set default javascript framework semantics when creating the
   client driver:

   Selenium::Client::Driver.new \
     :host => "localhost",
     :port => 4444,
     :browser => "*firefox",
     :timeout_in_seconds => 10,
     :url => "http://localhost:3000",
     :javascript_framework => :jquery

 - Can override default javascript framework semantics on a specific
   API call:

   driver.click "a-button" , :wait_for => :ajax, :javascript_framework => :jquery

 - Added new wait_for semantic: `:value` and `:no_value`:

    click :wait_for => :value, :element => 'a_locator', :value => 'some value'    # will wait for the field value of 'a_locator' to be 'some value'