@@ -3,7 +3,7 @@ require File.expand_path(__FILE__ + '/../../spec_helper')
 describe "Wait For (No) Field Value" do
 
   it "wait_for_field_value blocks until field is updated" do
-    page.open "http://localhost:4567/prototype.html"
+    page.open "http://localhost:4567/jquery.html"
     page.text("calculator-result").should be_empty
     page.type "calculator-expression", "2 + 2"
     page.click "calculator-button", :wait_for => :value,
@@ -13,7 +13,7 @@ describe "Wait For (No) Field Value" do
   end
   
   it "wait_for_no_field_value blocks until field is updated" do
-    page.open "http://localhost:4567/prototype.html"
+    page.open "http://localhost:4567/jquery.html"
     page.text("calculator-result").should be_empty
     page.type "calculator-expression", "2 + 2"
     page.click "calculator-button", :wait_for => :no_value,
@@ -23,7 +23,7 @@ describe "Wait For (No) Field Value" do
   end
   
   it "wait_for_field_value times out when field is never properly updated" do
-    page.open "http://localhost:4567/prototype.html"
+    page.open "http://localhost:4567/jquery.html"
     page.text("calculator-result").should be_empty
     page.type "calculator-expression", "2 + 2"
     should_timeout do
@@ -35,7 +35,7 @@ describe "Wait For (No) Field Value" do
   end
 
   it "wait_for_no_field_value times out when field is never properly updated" do
-    page.open "http://localhost:4567/prototype.html"
+    page.open "http://localhost:4567/jquery.html"
     should_timeout do
       page.wait_for_no_field_value "calculator-result", "", :timeout_in_seconds => 2
     end
