@@ -1,10 +1,33 @@
 <htmL>
 <head>
-  <title>Prototype - Selenium Ruby Client Sample App</title>
+  <title>jQuery - Selenium Ruby Client Sample App</title>
   <script type="application/x-javascript" src="/jquery-1.3.2.js"></script>
 </head>
 <body>
   <h1 id="title">jQuery - Selenium Ruby Client Sample App</h1>
+
+  <div id="element-present-demo">
+    <h2>Element / Text Present</h2>
+    <input type="button" id="create-element-button" value="Create Mojo" />
+    <input type="button" id="delete-element-button" value="Destroy Mojo" />
+
+    <script type="text/javascript" language="javascript">  
+      $(document).ready(function() {
+    
+        $('#create-element-button').click(function() {
+          $('#element-present-demo').append('<div id="new-element">We All Need ' + 'Some Mojo</div>');
+        });
+
+        $('#delete-element-button').click(function() {
+          $('#new-element').remove();
+        });
+      });
+    </script>
+  </div>
+
+  <div id="regexp-support">
+    <div id="dangerous-characters">There are some dangerous characters here: ' / \</div>
+  </div>
 
   <div id="ajax-demo">
     <h2>AJAX Calculator</h2>
@@ -16,7 +39,7 @@
     </form>
 
     <script type="text/javascript" language="javascript">  
-      $(document).ready(function(){
+      $(document).ready(function() {
 
         $('#calculator-button').click(function() { 
           $.post("/compute", $('#calculator-form').serialize(), function(data) {
